plugins {
    id 'java'
    id "org.sonarqube" version "5.0.0.4638"
    id 'org.springframework.boot' version "3.2.6"
    id 'io.spring.dependency-management' version "1.1.5"
    id "jacoco"
}

test {
    useJUnitPlatform()
}

sonarqube {
    properties {
        property "sonar.dynamicAnalysis", "reuseReports"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.java.coveragePlugin", "jacoco"
        property "sonar.language", "java"
        property "sonar.token", System.getenv("SONAR_TOKEN")
        property "sonar.organization", "navikt"
        property "sonar.project.monorepo.enabled", true
        property "sonar.projectKey", "testnav-levende-arbeidsforhold-service"
        property "sonar.projectName", "testnav-levende-arbeidsforhold-service"
        property "sonar.sourceEncoding", "UTF-8"
    }
}
bootJar {
    archiveFileName = "app.jar"
}

dependencyManagement {
    applyMavenExclusions = false
    imports {
        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2023.0.1'
    }
}

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        url = uri('https://packages.confluent.io/maven/')
    }
}

dependencies {
    implementation "no.nav.testnav.libs:kafka-config"
    implementation 'no.nav.testnav.libs:security-core'
    implementation 'no.nav.testnav.libs:servlet-core'
    implementation 'no.nav.testnav.libs:commands'
    implementation 'no.nav.testnav.libs:data-transfer-objects'
    implementation 'no.nav.testnav.libs:servlet-security'

    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    
    implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
    implementation 'io.swagger.core.v3:swagger-annotations-jakarta:2.2.21'

    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
    implementation 'org.hibernate.validator:hibernate-validator'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock'

    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    implementation 'no.nav.testnav.libs:kafka-config'
    implementation 'org.apache.kafka:kafka-clients:3.7.0'
    implementation 'io.confluent:kafka-avro-serializer:7.6.0'
    implementation 'org.springframework.kafka:spring-kafka'

    implementation 'no.nav.testnav.libs:avro-schema'
    implementation 'no.nav.testnav.libs:commands'
    implementation 'no.nav.testnav.libs:data-transfer-objects'
    implementation 'no.nav.testnav.libs:kafka-config'
    implementation 'no.nav.testnav.libs:security-core'
    implementation 'no.nav.testnav.libs:servlet-core'
}
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}
